sumo/tests/duarouter/alternatives/style2_input/errors/routealt/routealt_last_missing/errors.duarouter
Error: Attribute 'last' is missing in definition of routeDistribution '!1'.
Quitting (on error).
